# xwrpr

./: .gitignore  LICENSE  MANIFEST.in  README.md  credentials.sh  install_home.py  package.sh  pyproject.toml  requirements.txt  requirements_build.txt  requirements_dev.txt  setup.py  upload_pypi.sh  upload_testpypi.sh  user.cfg  user.ini
.devcontainer/: Dockerfile  devcontainer.json
XTB/: __init__.py  api.cfg  client.py  handler.py  utils.py  wrapper.py  xAPIConnector.py
helper/: helper.py
src/XTB/: __init__.py  account.py  api.cfg  client.py  handler.py  utils.py  wrapper.py
src/xtbwrp/: wrapper.py
tests/: __init__.py  all_symbols copy.py  config.py  conftest.py  helper.py  stream_balance copy.py  stream_data.py  test.py  test_01_basic.py  test_01_user.py  test_02_doublewrapper.py  test_03_direct_credentials.py  test_04_new_path.py  test_05_get_all_symbols.py  test_06_get_calendar.py  test_07_get_chart_last_request.py  test_08_get_chart_range_request.py  test_09_get_commission_def.py  test_10_get_current_user_data.py  test_10_get_user_data.py  test_11_get_ibs_history.py  test_12_get_margin_level.py  test_13_get_margin_trade.py  test_14_get_news.py  test_15_get_profit_calculation.py  test_15_profit_calculation.py  test_16_get_server_time.py  test_17_get_step_rules.py  test_17_get_symbol.py  test_18_get_symbol.py  test_18_get_tick_prices.py  test_19_get_tick_prices.py  test_1_user.py  test_20_get_trades.py  test_21_get_trades.py  test_21_get_trades_history.py  test_21_trades.py  test_21_trades_history.py  test_22_get_trade_records.py  test_22_trade_records.py  (+23 more)
(+10 files in other folders)
